--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
 
   <dependencies>
   <dependency>
+<groupId>io.vertx</groupId>
+<artifactId>vertx-rx-java</artifactId>
+<version>3.6.3</version>
+</dependency>
+  
+  <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>1.7.5</version>
