--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
 
   <dependencies>
   <dependency>
+ <groupId>io.vertx</groupId>
+ <artifactId>vertx-mongo-client</artifactId>
+ <version>3.6.3</version>
+</dependency>
+  <dependency>
 <groupId>io.vertx</groupId>
 <artifactId>vertx-rx-java</artifactId>
 <version>3.6.3</version>
